--- a/Content/style.css
+++ b/Content/style.css
@@ -821,7 +821,7 @@
 /* Main */
 
     #main {
-        background-image: url("images/dark-tl.svg"), url("images/dark-tr.svg"), url("images/dark-bl.svg"), url("images/dark-br.svg");
+        background-image: url("/Images/dark-tl.svg"), url("/Images/dark-tr.svg"), url("/Images/dark-bl.svg"), url("/Images/dark-br.svg");
         background-position: top left, top right, bottom left, bottom right;
         background-repeat: no-repeat;
         background-size: 25em;
@@ -853,7 +853,7 @@
     #cta {
         background-attachment: scroll, scroll, scroll, fixed;
         background-color: #645862;
-        background-image: url("images/light-tl.svg"), url("images/light-tr.svg"), url("images/overlay.png"), url("../images/banner.jpg");
+        background-image: url("/Images/light-tl.svg"), url("/Images/light-tr.svg"), url("/Images/overlay.png"), url("/Images/banner.jpg");
         background-position: top left, top right, top left, bottom center;
         background-repeat: no-repeat, no-repeat, repeat, no-repeat;
         background-size: 25em, 25em, auto, cover;
